- Fixed bug #46160 (SPL - Memory leak when exception is throwed in offsetSet method)